# pandas-ai-101

./: README.md  Taskfile.yml  pyproject.toml
cache/: cache_db_0.11.db
data/: pokemon_queries.json
pandas_ai_101/: api_key_manager.py  app.py  pandas_ai_handler.py  sidebar.py  welcome.py
